src/main.scss
@import '@/style/theme.scss';
@import '@/style/fonts.scss';
@import '@/style/mixins.scss';

html,
body {
  min-height: 100vh;
  margin: 0;
  padding: 0;
  width: 100%;
}

#root {
  min-height: inherit;
}

p,
h1,
h2,
h3 {
  margin: 0;
}

p {
  letter-spacing: 0.2px;
}

.okp4-dataverse-portal-main-layout {
  @include with-theme() {
    min-height: inherit;
    max-height: 100vh;
    display: flex;
    width: 100%;
    background-color: themed('background');
    position: relative;
    overflow: hidden;
  }

  .okp4-dataverse-portal-page-layout {
    flex: 1;
    grid-template-rows: max-content;
    width: 100%;
    min-height: inherit;
    max-height: 100vh;
    row-gap: 15px;

    @include mobile-bp {
      @include grid-container($colsNb: 6, $gutter: 16px);

      &.expanded-sidebar {
        @include blurred-page(1px);
      }
    }

    @include tablet-bp {
      @include grid-container($colsNb: 8, $gutter: 16px);
      row-gap: 48px;

      &.expanded-sidebar {
        @include blurred-page(1px);
      }
    }

    @include desktop-bp {
      @include grid-container($gutter: 34px);
    }

    @include large-desktop-bp {
      @include grid-container($gutter: 48px);
    }

    .okp4-dataverse-portal-toolbar-wrapper,
    .okp4-dataverse-portal-page-wrapper {
      @include mobile-bp {
        padding: 0 4.2%;
      }

      @include tablet-bp {
        padding: 0 3.1%;
      }

      @include desktop-bp {
        padding: 0 2.4%;
      }

      @include large-desktop-bp {
        padding: 0 3.1%;
      }
    }

    .okp4-dataverse-portal-toolbar-wrapper {
      @include grid-item($colStart: 1, $colEnd: -1, $rowStart: 1, $rowEnd: 1);
      padding-top: 25px;

      @include use-breakpoints(('mobile', 'tablet')) {
        padding-top: 44px;
      }
    }

    .okp4-dataverse-portal-page-wrapper {
      @include grid-item($colStart: 1, $colEnd: -1, $rowStart: 2, $rowEnd: auto);
      overflow-y: overlay;
      padding-bottom: 25px;

      @include use-breakpoints(('mobile', 'tablet')) {
        padding-bottom: 44px;
      }
    }
  }
}

